--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -8,21 +8,38 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/diaMenuName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="진하기"
+        android:text="menuName"
         android:textSize="30dp"/>
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <RadioButton
+            android:id="@+id/dia1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="연하게"/>
         <RadioButton
+            android:id="@+id/dia2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="진하게"/>
     </RadioGroup>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/diaOk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="확인"/>
+        <Button
+            android:id="@+id/diaCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="취소"/>
+    </LinearLayout>
 </LinearLayout>
