--- a/app/src/main/res/layout/menu_recyclerview.xml
+++ b/app/src/main/res/layout/menu_recyclerview.xml
@@ -3,18 +3,90 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#55000000"
+    android:background="#22ff00ff"
     android:layout_margin="5dp">
 
-    <TextView
-        android:id="@+id/menuname"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/menuname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="name"
+            android:textSize="20dp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/menuMinus"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:textSize="25dp"
+            android:padding="0dp"/>
+        <TextView
+            android:id="@+id/menuCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:text="1"/>
+        <Button
+            android:id="@+id/menuPlus"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:textSize="25dp"
+            android:padding="0dp"/>
+        <Button
+            android:id="@+id/menuDelete"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:text="X"
+            android:textSize="25dp"
+            android:padding="0dp"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="name"/>
-    <TextView
-        android:id="@+id/menuprice"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/menuprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:text="price"
+            android:textSize="25dp"
+            android:layout_marginRight="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:text="원"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="price"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/optShot"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/optTmp"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/optSize"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </LinearLayout>
