--- a/app/src/main/res/layout/fragment_menu2.xml
+++ b/app/src/main/res/layout/fragment_menu2.xml
@@ -4,40 +4,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Menu2">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <include
-                layout="@layout/item"
-                android:id="@+id/strawberry"/>
-            <include
-                layout="@layout/item"
-                android:id="@+id/blueberry"/>
-            <include
-                layout="@layout/item"
-                android:id="@+id/banana"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <include
-                layout="@layout/item"
-                android:id="@+id/choco"/>
-            <include
-                layout="@layout/item"
-                android:id="@+id/milk"/>
-            <include
-                layout="@layout/item"
-                android:id="@+id/cherry"/>
-        </LinearLayout>
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay1"/>
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay2"/>
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay3"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay4"/>
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay5"/>
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay6"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay7"/>
+                <include
+                    layout="@layout/item"
+                    android:id="@+id/lay8"/>
+                <include
+                    android:visibility="invisible"
+                    layout="@layout/item"/>
+            </LinearLayout>
 
-    </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
