--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="KIOSK"
+        android:text="수원문구점 키오스크"
         android:background="#55ff00ff"
         android:textSize="30dp"/>
 
